Ensure that modal’s close button is always visible.

--- a/src/components/profile-modal.css
+++ b/src/components/profile-modal.css
@@ -18,7 +18,6 @@
   padding-top: 20px;
   padding-bottom: 20px;
   z-index: 9998;
-  overflow: auto;
   text-align: center;
   background: white;
   border-radius: 10px;
@@ -35,11 +34,17 @@
     right: 5%;
   }
 }
+/* Allow content to overflow, without affecting positioning of close button. */
+.modal-content {
+  max-height: 100%;
+  overflow: auto;
+}
 .modal-close {
   cursor: pointer;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0px;
+  right: 0px;
+  padding: 10px;
   z-index: 9999;
   border: none;
   background-color: transparent;
